@startuml class_core
title Struktura danych systemu (Django Models)

' --- STYLIZACJA ---
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}
hide methods
hide circle

' ================= SŁOWNIKI =================
package "Słowniki" {
    class Parafia {
        +nazwa: str
        +miejscowosc: str
        +diecezja: str
    }
    class Duchowny {
        +imie_nazwisko: str
        +tytul: enum
        +aktywny: bool
    }
    class Wyznanie {
        +nazwa: str
    }
    
    Duchowny "0..*" --> "0..1" Parafia : posługuje w
}

' ================= OSOBY I RODZINY =================
package "Osoby i Rodziny" {
    class Osoba {
        +imie_pierwsze: str
        +nazwisko: str
        +data_urodzenia: date
        +data_zgonu: date
        +imie_bierzmowanie: str
    }
    
    class Rodzina {
        +nazwa: str
        +ulica: str
        +miejscowosc: str
    }
    
    class CzlonkostwoRodziny {
        +rola: enum
        +status: enum
    }
    
    class WizytaDuszpasterska {
        +rok: int
        +data_wizyty: date
        +status: enum
        +ofiara: str
    }
}

' ================= SAKRAMENTY =================
package "Sakramenty" {
    class Chrzest {
        +rok: int
        +akt_nr: str
        +data_chrztu: date
        +rodzice_imiona: str
    }
    
    class PierwszaKomunia {
        +rok: str
    }
    
    class Bierzmowanie {
        +rok: str
        +akt_nr: str
        +imie_bierzmowania: str
    }
    
    class Malzenstwo {
        +rok: str
        +akt_nr: str
        +data_slubu: date
    }
    
    class NamaszczenieChorych {
        +data: date
        +spowiedz: bool
        +komunia: bool
    }
    
    class Zgon {
        +rok: str
        +akt_nr: str
        +data_zgonu: date
        +data_pogrzebu: date
    }
}

' ================= CMENTARZ =================
package "Cmentarz" {
    class Sektor {
        +nazwa: str
    }
    class Grob {
        +numer: str
        +rzad: str
        +typ: enum
        +wazny_do: date
    }
    class Pochowany {
        +data_pochowania: date
    }
}

' ================= RELACJE GŁÓWNE =================

' -- Osoba i Słowniki --
Osoba "0..*" --> "0..1" Wyznanie : wyznanie

' -- Rodzina --
Rodzina "1" *-- "*" CzlonkostwoRodziny
Osoba "1" *-- "*" CzlonkostwoRodziny
Rodzina "1" -- "*" WizytaDuszpasterska
WizytaDuszpasterska "*" --> "0..1" Duchowny : ksiądz

' -- Sakramenty --
Chrzest "0..1" -- "1" Osoba : ochrzczony
Chrzest "*" --> "0..1" Parafia
Chrzest "*" --> "0..1" Wyznanie : rodzice_wyznanie

PierwszaKomunia "0..1" -- "1" Osoba
PierwszaKomunia "*" --> "0..1" Parafia

Bierzmowanie "0..1" -- "1" Osoba
Bierzmowanie "*" --> "0..1" Parafia
Bierzmowanie "*" --> "0..1" Duchowny : szafarz

Malzenstwo "*" --> "1" Osoba : małżonek A
Malzenstwo "*" --> "1" Osoba : małżonek B
Malzenstwo "*" --> "0..1" Parafia
Malzenstwo "*" --> "0..1" Duchowny : świadek

NamaszczenieChorych "*" --> "1" Osoba
NamaszczenieChorych "*" --> "0..1" Duchowny : szafarz

Zgon "0..1" -- "1" Osoba : <<OneToOne>>
Zgon "*" --> "0..1" Grob : powiązanie

' -- Cmentarz --
Sektor "1" -- "*" Grob
Grob "*" --> "0..1" Osoba : dysponent
Grob "1" -- "*" Pochowany
Pochowany "*" --> "1" Osoba : zmarły

@enduml